Added section class to portfolio

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -57,7 +57,7 @@
       </div>
     </header>
     <main>
-      <section class="portfolio">
+      <section class="section portfolio">
         <div class="container portfolio__container">
           <h1 class="portfolio__heading">Портфолио</h1>
           <ul class="filter">
