--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container header__container">
         <a href="#" title="WebStudio logo" class="logo logo--black">
           <span>Web</span>Studio
         </a>
-        <nav class="nav">
+        <nav class="header__nav nav">
           <ul class="nav__links">
             <li class="nav__links-item">
               <a href="../index.html" title="Cтудия" class="nav__link"
@@ -38,22 +38,22 @@
               <a href="#" title="Контакты" class="nav__link">Контакты</a>
             </li>
           </ul>
-          <ul class="nav__contacts">
-            <li class="nav__contacts-item">
-              <a
-                href="mailto:info@devstudio.com"
-                title="Email"
-                class="nav__email"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="nav__contacts-item">
-              <a href="tel:+380961111111" title="Phone" class="nav__phone"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
         </nav>
+        <ul class="header__contacts">
+          <li class="header__contacts-item">
+            <a
+              href="mailto:info@devstudio.com"
+              title="Email"
+              class="header__email"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header__contacts-item">
+            <a href="tel:+380961111111" title="Phone" class="header__phone"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -186,7 +186,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container footer__container">
         <a
           href="#"
